--- a/priv/rules/animelist.yml
+++ b/priv/rules/animelist.yml
@@ -5,7 +5,7 @@
   threshold: 15
   metadata:
     title_ru: Добро пожаловать!
-    text_ru: Легкой поступью Вы вошли в этот мир.
+    text_ru: Легкой поступью вы вошли в этот мир.
     title_en: Welcome to the world!
     text_en: You entered this world with a light footsteps.
     image: /assets/achievements/anime/animelist_1.png
