--- a/priv/rules/music.yml
+++ b/priv/rules/music.yml
@@ -9,8 +9,8 @@
   metadata:
     title_ru: Звуки музыки
     text_ru: Они раскрашивают этот мир в яркие цвета.
-    title_en:
-    text_en:
+    title_en: Sounds of music
+    text_en: They paint this world in bright colors.
     image: /assets/achievements/anime/music_1.jpg
     border_color: "#FBCEB1"
     topic_id: 222061
