--- a/priv/rules/police.yml
+++ b/priv/rules/police.yml
@@ -14,6 +14,8 @@
   metadata:
     title_ru: Народный дружинник
     text_ru: На улицах неспокойно. Нельзя терять бдительности.
+    title_en: People's vigilant
+    text_en: The streets are turbulent. Can't let our guard down
     image: /assets/achievements/anime/police_1.jpg
     border_color: "#B03F35"
     topic_id: 222038
@@ -24,6 +26,8 @@
   metadata:
     title_ru: Гражданин, пройдёмте
     text_ru: У каждого полицейского есть дело, которое не даёт ему покоя.
+    title_en: You are detained
+    text_en: Every policeman has a case that keeps him busy.
     image: /assets/achievements/anime/police_2.jpg
     border_color: "#c34d0a"
 
@@ -33,6 +37,8 @@
   metadata:
     title_ru: Отдел особого назначения
     text_ru: О скольких способах противостояния преступникам вы осведомлены?
+    title_en: Special Purpose Division
+    text_en: How many ways to confront criminals are you aware of?
     image: /assets/achievements/anime/police_3.png
     border_color: "#f4a900"
 
@@ -42,5 +48,7 @@
   metadata:
     title_ru: Вершина иерархии
     text_ru: Как вы себя чувствуете, забравшись так далеко?
+    title_en: Top of the hierarchy
+    text_en: How do you feel about getting this far?
     image: /assets/achievements/anime/police_4.jpg
     border_color: "#c7d0cc"
