--- a/priv/rules/military.yml
+++ b/priv/rules/military.yml
@@ -9,6 +9,8 @@
   metadata:
     title_ru: Новобранец
     text_ru: Зачислены на военную службу в очередной призыв.
+    title_en: The Rookie
+    text_en: Enlisted in the regular draft
     image: /assets/achievements/anime/military_1.png
     border_color: "#006400"
     topic_id: 222037
@@ -19,6 +21,8 @@
   metadata:
     title_ru: Сержант
     text_ru: Толковый сержант необыкновенно полезен в армии, так ведь?
+    title_en: Sergeant
+    text_en: A smart sergeant is unusually useful in the army, isn't he?
     image: /assets/achievements/anime/military_2.png
     border_color: "#5f665a"
 
@@ -28,6 +32,8 @@
   metadata:
     title_ru: Майор
     text_ru: Забыли о человеческих чувствах ради долга.
+    title_en: Major
+    text_en: Forget human feelings for the sake of duty.
     image: /assets/achievements/anime/military_3.png
     border_color: "#101011"
 
@@ -36,7 +42,8 @@
   threshold: 100
   metadata:
     title_ru: Генерал
-    text_ru: |-
-      Запах напалма поутру вам нравится больше, чем аниме.
+    text_ru: Запах напалма поутру вам нравится больше, чем аниме.
+    title_en: General
+    text_en: You like the smell of gunpowder in the morning better than anime.
     image: /assets/achievements/anime/military_4.gif
     border_color: "#2a456e"
