translation of oniichan.yml

--- a/priv/rules/oniichan.yml
+++ b/priv/rules/oniichan.yml
@@ -115,6 +115,8 @@
   metadata:
     title_ru: Братик
     text_ru: Вы знаете, как счастливо жить с сестрёнкой вечно.
+    title_en: Onii-chan~~
+    text_en: You know how to live happily ever after with a sissy.
     image: /assets/achievements/anime/oniichan_1.png
     border_color: "#f0d698"
     topic_id: 227425
