--- a/priv/rules/world_masterpiece_theater.yml
+++ b/priv/rules/world_masterpiece_theater.yml
@@ -36,6 +36,10 @@
     text_ru: |-
       Классика западной литературы глазами Востока.
       Встретиться с любимой книгой дважды — в бумаге и на экране.
+    title_en: World Masterpiece Theater
+    text_en: |-
+      The classics of Western literature through the eyes of the East.
+      Meet your favorite book twice - in paper and on screen.
     image: /assets/achievements/anime/world_masterpiece_theater_1.jpg
     border_color: "#00776B"
     topic_id: 248176
