mistake in translation
переводил для нейтрального определения гендера/пола, про референс с песни не знал

--- a/priv/rules/josei.yml
+++ b/priv/rules/josei.yml
@@ -10,7 +10,7 @@
     title_ru: Цветущая юность
     text_ru: Уже не девочка, но еще не женщина. Да что со мной происходит-то?!
     title_en: Youth That Can Bloom
-    text_en: No longer a baby, but not yet an old man. What's happening to me?!
+    text_en: No longer a girl, but not yet a woman. What's happening to me?!
     image: /assets/achievements/anime/josei_1.jpg
     border_color: "#f19cbb"
     topic_id: 222645
